// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checker large document (snapshot test) 1`] = `
{
  "ast": {
    "_kind": "Document",
    "definitions": [
      {
        "_kind": "ObjectTypeDefinition",
        "fields": [
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "r",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "g",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "b",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
        ],
        "isStatic": true,
        "leadingComment": null,
        "name": {
          "_kind": "TypeName",
          "name": "RGB",
        },
      },
      {
        "_kind": "ObjectTypeDefinition",
        "fields": [
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "type",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "StringType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "x",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "y",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "width",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "height",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "fills",
            },
            "optional": true,
            "trailingComment": null,
            "type": {
              "_kind": "ArrayType",
              "ofType": {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "ref": {
                  "_kind": "TypeName",
                  "name": "RGB",
                },
              },
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "strokes",
            },
            "optional": true,
            "trailingComment": null,
            "type": {
              "_kind": "LiveListType",
              "ofType": {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "ref": {
                  "_kind": "TypeName",
                  "name": "RGB",
                },
              },
            },
          },
        ],
        "isStatic": false,
        "leadingComment": null,
        "name": {
          "_kind": "TypeName",
          "name": "Rect",
        },
      },
      {
        "_kind": "ObjectTypeDefinition",
        "fields": [
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "type",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "StringType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "cx",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "cy",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "radius",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "fill",
            },
            "optional": true,
            "trailingComment": null,
            "type": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "ref": {
                "_kind": "TypeName",
                "name": "RGB",
              },
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "stroke",
            },
            "optional": true,
            "trailingComment": null,
            "type": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "ref": {
                "_kind": "TypeName",
                "name": "RGB",
              },
            },
          },
        ],
        "isStatic": false,
        "leadingComment": null,
        "name": {
          "_kind": "TypeName",
          "name": "Circle",
        },
      },
      {
        "_kind": "ObjectTypeDefinition",
        "fields": [
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "mycircle",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "TypeRef",
              "asLiveObject": true,
              "ref": {
                "_kind": "TypeName",
                "name": "Circle",
              },
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "myrect",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "TypeRef",
              "asLiveObject": true,
              "ref": {
                "_kind": "TypeName",
                "name": "Rect",
              },
            },
          },
        ],
        "isStatic": false,
        "leadingComment": null,
        "name": {
          "_kind": "TypeName",
          "name": "Storage",
        },
      },
    ],
  },
  "definitions": [
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "r",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "g",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "b",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
      ],
      "isStatic": true,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "RGB",
      },
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "type",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "StringType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "x",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "y",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "width",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "height",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "fills",
          },
          "optional": true,
          "trailingComment": null,
          "type": {
            "_kind": "ArrayType",
            "ofType": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "ref": {
                "_kind": "TypeName",
                "name": "RGB",
              },
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "strokes",
          },
          "optional": true,
          "trailingComment": null,
          "type": {
            "_kind": "LiveListType",
            "ofType": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "ref": {
                "_kind": "TypeName",
                "name": "RGB",
              },
            },
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Rect",
      },
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "type",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "StringType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "cx",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "cy",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "radius",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "fill",
          },
          "optional": true,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "ref": {
              "_kind": "TypeName",
              "name": "RGB",
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "stroke",
          },
          "optional": true,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "ref": {
              "_kind": "TypeName",
              "name": "RGB",
            },
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Circle",
      },
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "mycircle",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": true,
            "ref": {
              "_kind": "TypeName",
              "name": "Circle",
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "myrect",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": true,
            "ref": {
              "_kind": "TypeName",
              "name": "Rect",
            },
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Storage",
      },
    },
  ],
  "getDefinition": [Function],
  "root": {
    "_kind": "ObjectTypeDefinition",
    "fields": [
      {
        "_kind": "FieldDef",
        "leadingComment": null,
        "name": {
          "_kind": "Identifier",
          "name": "mycircle",
        },
        "optional": false,
        "trailingComment": null,
        "type": {
          "_kind": "TypeRef",
          "asLiveObject": true,
          "ref": {
            "_kind": "TypeName",
            "name": "Circle",
          },
        },
      },
      {
        "_kind": "FieldDef",
        "leadingComment": null,
        "name": {
          "_kind": "Identifier",
          "name": "myrect",
        },
        "optional": false,
        "trailingComment": null,
        "type": {
          "_kind": "TypeRef",
          "asLiveObject": true,
          "ref": {
            "_kind": "TypeName",
            "name": "Rect",
          },
        },
      },
    ],
    "isStatic": false,
    "leadingComment": null,
    "name": {
      "_kind": "TypeName",
      "name": "Storage",
    },
  },
}
`;

exports[`checker large legacy document (snapshot test) 1`] = `
{
  "ast": {
    "_kind": "Document",
    "definitions": [
      {
        "_kind": "ObjectTypeDefinition",
        "fields": [
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "r",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "g",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "b",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
        ],
        "isStatic": true,
        "leadingComment": null,
        "name": {
          "_kind": "TypeName",
          "name": "RGB",
        },
      },
      {
        "_kind": "ObjectTypeDefinition",
        "fields": [
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "type",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "LiteralType",
              "value": "rect",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "x",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "y",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "width",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "height",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "fills",
            },
            "optional": true,
            "trailingComment": null,
            "type": {
              "_kind": "ArrayType",
              "ofType": {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "ref": {
                  "_kind": "TypeName",
                  "name": "RGB",
                },
              },
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "strokes",
            },
            "optional": true,
            "trailingComment": null,
            "type": {
              "_kind": "LiveListType",
              "ofType": {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "ref": {
                  "_kind": "TypeName",
                  "name": "RGB",
                },
              },
            },
          },
        ],
        "isStatic": false,
        "leadingComment": null,
        "name": {
          "_kind": "TypeName",
          "name": "Rect",
        },
      },
      {
        "_kind": "ObjectTypeDefinition",
        "fields": [
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "type",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "LiteralType",
              "value": "circle",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "cx",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "cy",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "radius",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "NumberType",
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "fill",
            },
            "optional": true,
            "trailingComment": null,
            "type": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "ref": {
                "_kind": "TypeName",
                "name": "RGB",
              },
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "stroke",
            },
            "optional": true,
            "trailingComment": null,
            "type": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "ref": {
                "_kind": "TypeName",
                "name": "RGB",
              },
            },
          },
        ],
        "isStatic": false,
        "leadingComment": null,
        "name": {
          "_kind": "TypeName",
          "name": "Circle",
        },
      },
      {
        "_kind": "ObjectTypeDefinition",
        "fields": [
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "mycircle",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "UnionType",
              "members": [
                {
                  "_kind": "TypeRef",
                  "asLiveObject": true,
                  "ref": {
                    "_kind": "TypeName",
                    "name": "Circle",
                  },
                },
                {
                  "_kind": "NullType",
                },
              ],
            },
          },
          {
            "_kind": "FieldDef",
            "leadingComment": null,
            "name": {
              "_kind": "Identifier",
              "name": "myrect",
            },
            "optional": false,
            "trailingComment": null,
            "type": {
              "_kind": "UnionType",
              "members": [
                {
                  "_kind": "TypeRef",
                  "asLiveObject": true,
                  "ref": {
                    "_kind": "TypeName",
                    "name": "Rect",
                  },
                },
                {
                  "_kind": "StringType",
                },
                {
                  "_kind": "NullType",
                },
              ],
            },
          },
        ],
        "isStatic": false,
        "leadingComment": null,
        "name": {
          "_kind": "TypeName",
          "name": "Storage",
        },
      },
    ],
  },
  "definitions": [
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "r",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "g",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "b",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
      ],
      "isStatic": true,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "RGB",
      },
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "type",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "LiteralType",
            "value": "rect",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "x",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "y",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "width",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "height",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "fills",
          },
          "optional": true,
          "trailingComment": null,
          "type": {
            "_kind": "ArrayType",
            "ofType": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "ref": {
                "_kind": "TypeName",
                "name": "RGB",
              },
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "strokes",
          },
          "optional": true,
          "trailingComment": null,
          "type": {
            "_kind": "LiveListType",
            "ofType": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "ref": {
                "_kind": "TypeName",
                "name": "RGB",
              },
            },
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Rect",
      },
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "type",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "LiteralType",
            "value": "circle",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "cx",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "cy",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "radius",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "fill",
          },
          "optional": true,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "ref": {
              "_kind": "TypeName",
              "name": "RGB",
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "stroke",
          },
          "optional": true,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "ref": {
              "_kind": "TypeName",
              "name": "RGB",
            },
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Circle",
      },
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "mycircle",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "UnionType",
            "members": [
              {
                "_kind": "TypeRef",
                "asLiveObject": true,
                "ref": {
                  "_kind": "TypeName",
                  "name": "Circle",
                },
              },
              {
                "_kind": "NullType",
              },
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "myrect",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "UnionType",
            "members": [
              {
                "_kind": "TypeRef",
                "asLiveObject": true,
                "ref": {
                  "_kind": "TypeName",
                  "name": "Rect",
                },
              },
              {
                "_kind": "StringType",
              },
              {
                "_kind": "NullType",
              },
            ],
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Storage",
      },
    },
  ],
  "getDefinition": [Function],
  "root": {
    "_kind": "ObjectTypeDefinition",
    "fields": [
      {
        "_kind": "FieldDef",
        "leadingComment": null,
        "name": {
          "_kind": "Identifier",
          "name": "mycircle",
        },
        "optional": false,
        "trailingComment": null,
        "type": {
          "_kind": "UnionType",
          "members": [
            {
              "_kind": "TypeRef",
              "asLiveObject": true,
              "ref": {
                "_kind": "TypeName",
                "name": "Circle",
              },
            },
            {
              "_kind": "NullType",
            },
          ],
        },
      },
      {
        "_kind": "FieldDef",
        "leadingComment": null,
        "name": {
          "_kind": "Identifier",
          "name": "myrect",
        },
        "optional": false,
        "trailingComment": null,
        "type": {
          "_kind": "UnionType",
          "members": [
            {
              "_kind": "TypeRef",
              "asLiveObject": true,
              "ref": {
                "_kind": "TypeName",
                "name": "Rect",
              },
            },
            {
              "_kind": "StringType",
            },
            {
              "_kind": "NullType",
            },
          ],
        },
      },
    ],
    "isStatic": false,
    "leadingComment": null,
    "name": {
      "_kind": "TypeName",
      "name": "Storage",
    },
  },
}
`;
